[tool.poetry]
name = "Selenium-Scrape-Game-Information"
version = "1"
description = ""
authors = ["Vincent"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
